# cartera_final

./: repository.yaml
cartera_final/: Dockerfile  Dockerfile.monorepo  README.md  app.py  build.yaml  config.yaml  cotizaciones_scheduler.py  crontabs_root  entry_refresh.sh  pyproject.toml  refresh_cotizaciones.py  requirements.txt  run.sh
cartera_final/filios_core/: __init__.py  config.py  constants.py  db.py  isin.py  util.py
cartera_final/filios_core/fifo/: __init__.py  cripto.py  fondos.py  keys.py  sale_extras.py  stocks.py
